add third project

--- a/src/templates/pages/index.pug
+++ b/src/templates/pages/index.pug
@@ -59,9 +59,12 @@ html(lang="ru")
               </svg>
             .slider-inner 
               .slider-line
+                a.slide(href="./luxtrips/index.html")
+                  .title-slide LuxTrips - в процессе реализации
+                  img.img-slide(src="~@/img/luxtrips.png", loading="lazy", alt="LuxTrips - в процессе реализации")
                 a.slide(href="./sedona/index.html")
-                  .title-slide Седона - простой 3-х страничный сайт
-                  img.img-slide(src="~@/img/sedona.png", loading="lazy", alt="Седона - простой 3-х страничный сайт")
+                  .title-slide Sedona - простой 3-х страничный сайт
+                  img.img-slide(src="~@/img/sedona.png", loading="lazy", alt="Sedona - простой 3-х страничный сайт")
                 a.slide(href="https://github.com/ermakov95/portfolio-website")
                   .title-slide Данный лендинг-портфолио
                   img.img-slide(src="~@/img/portfolio.png", loading="lazy", alt="Данный лендинг-портфолио")
