add fourth project

--- a/src/templates/pages/index.pug
+++ b/src/templates/pages/index.pug
@@ -62,6 +62,9 @@ html(lang="ru")
                 a.slide(href="./luxtrips/index.html")
                   .title-slide LuxTrips - в процессе реализации
                   img.img-slide(src="~@/img/luxtrips.jpg", loading="lazy", alt="LuxTrips - в процессе реализации")
+                a.slide(href="./todo/index.html")
+                  .title-slide Заметки с todo-пунктами
+                  img.img-slide(src="~@/img/todo.jpg", loading="lazy", alt="Заметки с todo-пунктами")
                 a.slide(href="./sedona/index.html")
                   .title-slide Sedona - простой 3-х страничный сайт
                   img.img-slide(src="~@/img/sedona.jpg", loading="lazy", alt="Sedona - простой 3-х страничный сайт")
