--- a/src/templates/pages/index.pug
+++ b/src/templates/pages/index.pug
@@ -61,16 +61,28 @@ html(lang="ru")
               .slider-line
                 a.slide(href="./luxtrips/index.html")
                   .title-slide LuxTrips - в процессе реализации
-                  img.img-slide(src="~@/img/luxtrips.jpg", loading="lazy", alt="LuxTrips - в процессе реализации")
+                  picture.img-slide
+                    source(src="~@/img/luxtrips.webp", type="image/webp", alt="LuxTrips - в процессе реализации", loading="lazy")
+                    source(src="~@/img/luxtrips.jpg", type="image/jpeg", alt="LuxTrips - в процессе реализации", loading="lazy")
+                    img.img-slide(src="~@/img/luxtrips.jpg", loading="lazy", alt="LuxTrips - в процессе реализации")
                 a.slide(href="./todo/index.html")
                   .title-slide Заметки с todo-пунктами
-                  img.img-slide(src="~@/img/todo.jpg", loading="lazy", alt="Заметки с todo-пунктами")
+                  picture.img-slide
+                    source(src="~@/img/todo.webp", type="image/webp", alt="Заметки с todo-пунктами", loading="lazy")
+                    source(src="~@/img/todo.jpg", type="image/jpeg", alt="Заметки с todo-пунктами", loading="lazy")
+                    img.img-slide(src="~@/img/todo.jpg", loading="lazy", alt="Заметки с todo-пунктами")
                 a.slide(href="./sedona/index.html")
                   .title-slide Sedona - простой 3-х страничный сайт
-                  img.img-slide(src="~@/img/sedona.jpg", loading="lazy", alt="Sedona - простой 3-х страничный сайт")
+                  picture.img-slide
+                    source(src="~@/img/sedona.webp", type="image/webp", alt="Sedona - простой 3-х страничный сайт", loading="lazy")
+                    source(src="~@/img/sedona.jpg", type="image/jpeg", alt="Sedona - простой 3-х страничный сайт", loading="lazy")
+                    img.img-slide(src="~@/img/sedona.jpg", loading="lazy", alt="Sedona - простой 3-х страничный сайт")
                 a.slide(href="https://github.com/ermakov95/portfolio-website")
                   .title-slide Данный лендинг-портфолио
-                  img.img-slide(src="~@/img/portfolio.jpg", loading="lazy", alt="Данный лендинг-портфолио")
+                  picture.img-slide
+                    source(src="~@/img/portfolio.webp", type="image/webp", alt="Данный лендинг-портфолио", loading="lazy")
+                    source(src="~@/img/portfolio.jpg", type="image/jpeg", alt="Данный лендинг-портфолио", loading="lazy")
+                    img.img-slide(src="~@/img/portfolio.jpg", loading="lazy", alt="Данный лендинг-портфолио")
             .slider-button.slider-next
               <svg class = "arrow" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M3.85355 2.14645C3.65829 1.95118 3.34171 1.95118 3.14645 2.14645C2.95118 2.34171 2.95118 2.65829 3.14645 2.85355L7.14645 6.85355C7.34171 7.04882 7.65829 7.04882 7.85355 6.85355L11.8536 2.85355C12.0488 2.65829 12.0488 2.34171 11.8536 2.14645C11.6583 1.95118 11.3417 1.95118 11.1464 2.14645L7.5 5.79289L3.85355 2.14645ZM3.85355 8.14645C3.65829 7.95118 3.34171 7.95118 3.14645 8.14645C2.95118 8.34171 2.95118 8.65829 3.14645 8.85355L7.14645 12.8536C7.34171 13.0488 7.65829 13.0488 7.85355 12.8536L11.8536 8.85355C12.0488 8.65829 12.0488 8.34171 11.8536 8.14645C11.6583 7.95118 11.3417 7.95118 11.1464 8.14645L7.5 11.7929L3.85355 8.14645Z" />
