add fifth project

--- a/src/templates/pages/index.pug
+++ b/src/templates/pages/index.pug
@@ -71,12 +71,18 @@ html(lang="ru")
                     source(src="~@/img/todo.webp", type="image/webp", alt="Заметки с todo-пунктами", loading="lazy")
                     source(src="~@/img/todo.jpg", type="image/jpeg", alt="Заметки с todo-пунктами", loading="lazy")
                     img.img-slide(src="~@/img/todo.jpg", loading="lazy", alt="Заметки с todo-пунктами")
-                a.slide(href="./sedona/index.html")
-                  .title-slide Sedona - простой 3-х страничный сайт
+                a.slide(href="./poker/index.html")
+                  .title-slide One-poker-page-project
                   picture.img-slide
-                    source(src="~@/img/sedona.webp", type="image/webp", alt="Sedona - простой 3-х страничный сайт", loading="lazy")
-                    source(src="~@/img/sedona.jpg", type="image/jpeg", alt="Sedona - простой 3-х страничный сайт", loading="lazy")
-                    img.img-slide(src="~@/img/sedona.jpg", loading="lazy", alt="Sedona - простой 3-х страничный сайт")
+                    source(src="~@/img/poker.webp", type="image/webp", alt="One-poker-page-project", loading="lazy")
+                    source(src="~@/img/poker.jpg", type="image/jpeg", alt="One-poker-page-project", loading="lazy")
+                    img.img-slide(src="~@/img/poker.jpg", loading="lazy", alt="One-poker-page-project")
+                a.slide(href="./sedona/index.html")
+                  .title-slide Sedona - простой 3-х страничник
+                  picture.img-slide
+                    source(src="~@/img/sedona.webp", type="image/webp", alt="Sedona - простой 3-х страничник", loading="lazy")
+                    source(src="~@/img/sedona.jpg", type="image/jpeg", alt="Sedona - простой 3-х страничник", loading="lazy")
+                    img.img-slide(src="~@/img/sedona.jpg", loading="lazy", alt="Sedona - простой 3-х страничник")
                 a.slide(href="https://github.com/ermakov95/portfolio-website")
                   .title-slide Данный лендинг-портфолио
                   picture.img-slide
@@ -122,11 +128,10 @@ html(lang="ru")
               .title 
                 p I am Ivan Ermakov — <br>beginner web-developer from Russia.
                 p Я Иван Ермаков — <br>начинающий веб-разработчик из Барнаула.
-              ul.langs Изучаю:
+              ul.langs Навыки:
                 li.li.li-html HTML
                 li.li.li-css CSS
-                li.li.li-js JavaScript 
-                li.li.li-py Python
+                li.li.li-js JavaScript
               ul.stack Также использую:
                 li.li.li-pug PUG
                 li.li.li-scss SCSS
